single-ngw-for-multiple-vpc/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.public.id

  tags = {
    Name = "igw"
  }
}
